[tool.poetry]
name = "infura-app"
version = "0.1.0"
description = "App for communicating with Infura Api"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
aiohttp = "^3.11.16"
asyncio = "^3.4.3"
pydantic = "^2.11.1"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-httpserver = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
